--- a/sass/web/base.scss
+++ b/sass/web/base.scss
@@ -22,6 +22,10 @@ button:focus{outline: none;}
 img{/*max-height:100%;会导致百度地图不能用*/max-width:100%;*height:100%;*width:100%;margin:auto;}
 input{border:none;}
 
+
+.full-height{
+    height:100%;
+}
 .abs{position: absolute;}
 .absCenter {
     @extend .abs;
