--- a/sass/web/variable.scss
+++ b/sass/web/variable.scss
@@ -1,1 +1,38 @@
+@charset "UTF-8";
+/*-----------------------------------------------------	*/
+/* setting scss*/
+/*-----------------------------------------------------	*/
+
+
+/* 开关设置*/
+/*-----------------------------------------------------	*/
+$lte7:                  true !default; /*是否兼容ie6-7*/
+$filter:                false !default; /*是否为ie6-8开启css3滤镜兼容，常用于渐变背景 */
+$printStyleSwitch:      false !default; /*是否开启打印样式*/
+
+
 $baseImgUrl:'/img/';
+
+/* clearfix*/
+/* 闭合子元素的浮动*/
+@mixin clearfix {
+  @if $lte7 {
+    *zoom: 1;
+  }
+  &:before,
+  &:after {
+    content: "";
+    display: table;
+  }
+  &:after {
+    clear: both;
+  }
+}
+%clearfix{
+  @include clearfix;
+}
+
+%float-l{
+	float:left;
+}
+
